--- a/locale/cs_CZ/hammer-cli-foreman-puppet.po
+++ b/locale/cs_CZ/hammer-cli-foreman-puppet.po
@@ -3,19 +3,25 @@
 # This file is distributed under the same license as the hammer-cli-foreman-puppet package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Translators:
+# Pavel Borecki <pavel.borecki@gmail.com>, 2021
+#
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: hammer-cli-foreman-puppet 0.0.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-08-02 23:05+0530\n"
-"PO-Revision-Date: 2021-08-02 23:05+0530\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-08-02 17:36+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2021\n"
+"Language-Team: Czech (Czech Republic) (https://app.transifex.com/foreman/"
+"teams/114/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Language: cs_CZ\n"
+"Plural-Forms: nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n >= 2 && n "
+"<= 4 && n % 1 == 0) ? 1: (n % 1 != 0 ) ? 2 : 3;\n"
 
 msgid "Manage Foreman Puppet classes"
 msgstr ""
@@ -48,10 +54,10 @@ msgid "Could not disassociate the environment"
 msgstr ""
 
 msgid "Id"
-msgstr ""
+msgstr "Identifikátor"
 
 msgid "Name"
-msgstr ""
+msgstr "Název"
 
 msgid "Smart class parameters"
 msgstr ""
@@ -78,7 +84,7 @@ msgid "Name of Puppet proxy"
 msgstr ""
 
 msgid "ID"
-msgstr ""
+msgstr "Identifikátor"
 
 msgid "Config group created."
 msgstr ""
@@ -99,25 +105,25 @@ msgid "Could not delete the config group"
 msgstr ""
 
 msgid "Environment created."
-msgstr ""
+msgstr "Prostředí vytvořeno."
 
 msgid "Could not create the environment"
-msgstr ""
+msgstr "Prostředí se nedaří vytvořit"
 
 msgid "Environment updated."
-msgstr ""
+msgstr "Prostředí aktualizováno."
 
 msgid "Could not update the environment"
-msgstr ""
+msgstr "Prostředí se nedaří aktualizovat"
 
 msgid "Environment deleted."
-msgstr ""
+msgstr "Prostředí smazáno."
 
 msgid "Could not delete the environment"
-msgstr ""
+msgstr "Prostředí se nedaří smazat"
 
 msgid "Puppet Environment"
-msgstr ""
+msgstr "Puppet prostředí"
 
 msgid "Puppet CA Proxy"
 msgstr ""
@@ -126,112 +132,112 @@ msgid "Puppet Master Proxy"
 msgstr ""
 
 msgid "Missing options to search %s"
-msgstr ""
+msgstr "Chybějící volby pro hledání %s"
 
 msgid "one of %s not found."
-msgstr ""
+msgstr "jedno z %s nenalezeno."
 
 msgid "Puppet environment name"
 msgstr ""
 
 msgid "Puppet class name"
-msgstr ""
+msgstr "Název puppet třídy"
 
 msgid "Smart class parameter name"
 msgstr ""
 
 msgid "Name to search by"
-msgstr ""
+msgstr "Název podle kterého hledat"
 
 msgid "Puppetclasses"
 msgstr ""
 
 msgid "Environments"
-msgstr ""
+msgstr "Prostředí"
 
 msgid "Parameter"
-msgstr ""
+msgstr "Parametr"
 
 msgid "Default Value"
-msgstr ""
+msgstr "Výchozí hodnota"
 
 msgid "Override"
-msgstr ""
+msgstr "Přebít"
 
 msgid "Puppet class"
-msgstr ""
+msgstr "Puppet třída"
 
 msgid "Class Id"
-msgstr ""
+msgstr "Identif. třídy"
 
 msgid "Description"
-msgstr ""
+msgstr "Popis"
 
 msgid "Type"
-msgstr ""
+msgstr "Typ"
 
 msgid "Hidden Value?"
-msgstr ""
+msgstr "Skrytá hodnota?"
 
 msgid "Omit"
-msgstr ""
+msgstr "Vynechat"
 
 msgid "Required"
-msgstr ""
+msgstr "Vyžadováno"
 
 msgid "Validator"
-msgstr ""
+msgstr "Ověřování"
 
 msgid "Rule"
-msgstr ""
+msgstr "Pravidlo"
 
 msgid "Override values"
-msgstr ""
+msgstr "Přebít hodnoty"
 
 msgid "Merge overrides"
 msgstr ""
 
 msgid "Merge default value"
-msgstr ""
+msgstr "Sloučit výchozí hodnotu"
 
 msgid "Avoid duplicates"
-msgstr ""
+msgstr "Vyhnout se duplicitám"
 
 msgid "Order"
-msgstr ""
+msgstr "Pořadí"
 
 msgid "Values"
-msgstr ""
+msgstr "Hodnoty"
 
 msgid "Match"
-msgstr ""
+msgstr "Shoda"
 
 msgid "Value"
-msgstr ""
+msgstr "Hodnota"
 
 msgid "Parameter updated."
-msgstr ""
+msgstr "Parametr aktualizován."
 
 msgid "Could not update the parameter"
-msgstr ""
+msgstr "Parametr se nedaří aktualizovat"
 
 msgid "Value to use when there is no match"
-msgstr ""
+msgstr "Hodnoty které použít v případě nenalezení žádné shody"
 
 msgid "Override this parameter"
-msgstr ""
+msgstr "Přebít tento parametr"
 
 msgid "This parameter is required"
-msgstr ""
+msgstr "Tento parametr je potřebný"
 
 msgid "Type of the parameter"
-msgstr ""
+msgstr "Typ parametru"
 
 msgid "Type of the validator"
-msgstr ""
+msgstr "Typ validátoru"
 
 msgid "The order in which values are resolved"
-msgstr ""
+msgstr "Pořadí ve kterém jsou hodnoty řešeny"
 
 msgid "Override value, required if omit is false"
 msgstr ""
@@ -255,13 +261,13 @@ msgid "Import Puppet classes from Puppet proxy"
 msgstr ""
 
 msgid "Do not run the import"
-msgstr ""
+msgstr "Nespouštět import"
 
 msgid "Result"
-msgstr ""
+msgstr "Výsledek"
 
 msgid "Changed environments"
-msgstr ""
+msgstr "Změněná prostředí"
 
 msgid "New classes"
 msgstr ""
