--- a/locale/zh_CN/hammer-cli-foreman-puppet.po
+++ b/locale/zh_CN/hammer-cli-foreman-puppet.po
@@ -3,274 +3,281 @@
 # This file is distributed under the same license as the hammer-cli-foreman-puppet package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Translators:
+# 0868a4d1af5275b3f70b0a6dac4c99a4, 2021
+# Bryan Kearney <bryan.kearney@gmail.com>, 2021
+# Amit Upadhye <aupadhye@redhat.com>, 2022
+#
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: hammer-cli-foreman-puppet 0.0.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-08-02 23:05+0530\n"
-"PO-Revision-Date: 2021-08-02 23:05+0530\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-08-02 17:36+0000\n"
+"Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
+"Language-Team: Chinese (China) (https://app.transifex.com/foreman/teams/114/"
+"zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Language: zh_CN\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "Manage Foreman Puppet classes"
-msgstr ""
+msgstr "管理 Foreman Puppet 类"
 
 msgid "Manage Foreman Puppet environments"
-msgstr ""
+msgstr "管理 Foreman Puppet 环境"
 
 msgid "Manage Foreman config groups"
-msgstr ""
+msgstr "管理 Foreman 配置组"
 
 msgid "Manage Foreman Puppet smart class parameters"
-msgstr ""
+msgstr "管理 Foreman Puppet 智能类参数"
 
 msgid "Associate a Puppet environment"
-msgstr ""
+msgstr "关联一个 Puppet 环境"
 
 msgid "The environment has been associated."
-msgstr ""
+msgstr "该环境已经关联。"
 
 msgid "Could not associate the environment"
-msgstr ""
+msgstr "无法关联该环境"
 
 msgid "Disassociate a Puppet environment"
-msgstr ""
+msgstr "解除与一个 Puppet 环境的关联"
 
 msgid "The environment has been disassociated."
-msgstr ""
+msgstr "该环境已经取消关联。"
 
 msgid "Could not disassociate the environment"
-msgstr ""
+msgstr "无法取消关联该环境"
 
 msgid "Id"
-msgstr ""
+msgstr "ID"
 
 msgid "Name"
-msgstr ""
+msgstr "名称"
 
 msgid "Smart class parameters"
-msgstr ""
+msgstr "智能类参数"
 
 msgid "ID of associated Puppet environment"
-msgstr ""
+msgstr "与 Puppet 环境关联的 ID"
 
 msgid "Name of associated Puppet environment"
-msgstr ""
+msgstr "与 Puppet 环境关联的名称"
 
 msgid "IDs of associated Puppet environment"
-msgstr ""
+msgstr "与 Puppet 环境关联的 ID"
 
 msgid "Names of associated Puppet environment"
-msgstr ""
+msgstr "与 Puppet 环境关联的名称"
 
 msgid "List of Puppet class ids"
-msgstr ""
+msgstr "Puppet 类 id 列表"
 
 msgid "Name of Puppet CA proxy"
-msgstr ""
+msgstr "Puppet CA 代理的名称"
 
 msgid "Name of Puppet proxy"
-msgstr ""
+msgstr "Puppet 代理的名称"
 
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 msgid "Config group created."
-msgstr ""
+msgstr "已创建配置组。"
 
 msgid "Could not create the config group"
-msgstr ""
+msgstr "无法创建配置组"
 
 msgid "Config group updated."
-msgstr ""
+msgstr "已更新配置组。"
 
 msgid "Could not update the config group"
-msgstr ""
+msgstr "无法更新该配置组"
 
 msgid "Config group has been deleted."
-msgstr ""
+msgstr "已删除配置组。"
 
 msgid "Could not delete the config group"
-msgstr ""
+msgstr "无法删除配置组"
 
 msgid "Environment created."
-msgstr ""
+msgstr "已创建环境。"
 
 msgid "Could not create the environment"
-msgstr ""
+msgstr "无法创建环境"
 
 msgid "Environment updated."
-msgstr ""
+msgstr "已更新环境。"
 
 msgid "Could not update the environment"
-msgstr ""
+msgstr "无法更新环境"
 
 msgid "Environment deleted."
-msgstr ""
+msgstr "已删除环境。"
 
 msgid "Could not delete the environment"
-msgstr ""
+msgstr "无法删除环境"
 
 msgid "Puppet Environment"
-msgstr ""
+msgstr "Puppet 环境"
 
 msgid "Puppet CA Proxy"
-msgstr ""
+msgstr "Puppet CA 代理服务器"
 
 msgid "Puppet Master Proxy"
-msgstr ""
+msgstr "Puppet 主代理服务器"
 
 msgid "Missing options to search %s"
-msgstr ""
+msgstr "缺少搜索 %s 的选项。"
 
 msgid "one of %s not found."
-msgstr ""
+msgstr "一个 %s 未找到。"
 
 msgid "Puppet environment name"
-msgstr ""
+msgstr "Puppet 环境名称"
 
 msgid "Puppet class name"
-msgstr ""
+msgstr "Puppet 类名称"
 
 msgid "Smart class parameter name"
-msgstr ""
+msgstr "智能类参数名称"
 
 msgid "Name to search by"
-msgstr ""
+msgstr "用来进行搜索的名称"
 
 msgid "Puppetclasses"
-msgstr ""
+msgstr "Puppetclasses"
 
 msgid "Environments"
-msgstr ""
+msgstr "环境"
 
 msgid "Parameter"
-msgstr ""
+msgstr "参数"
 
 msgid "Default Value"
-msgstr ""
+msgstr "默认值"
 
 msgid "Override"
-msgstr ""
+msgstr "覆盖"
 
 msgid "Puppet class"
-msgstr ""
+msgstr "Puppet 类别"
 
 msgid "Class Id"
-msgstr ""
+msgstr "类别 ID"
 
 msgid "Description"
-msgstr ""
+msgstr "描述"
 
 msgid "Type"
-msgstr ""
+msgstr "类型"
 
 msgid "Hidden Value?"
-msgstr ""
+msgstr "隐藏值？"
 
 msgid "Omit"
-msgstr ""
+msgstr "省略"
 
 msgid "Required"
-msgstr ""
+msgstr "必需的"
 
 msgid "Validator"
-msgstr ""
+msgstr "验证器"
 
 msgid "Rule"
-msgstr ""
+msgstr "规则"
 
 msgid "Override values"
-msgstr ""
+msgstr "覆盖规则"
 
 msgid "Merge overrides"
-msgstr ""
+msgstr "合并覆盖"
 
 msgid "Merge default value"
-msgstr ""
+msgstr "合并默认值"
 
 msgid "Avoid duplicates"
-msgstr ""
+msgstr "避免重复"
 
 msgid "Order"
-msgstr ""
+msgstr "顺序"
 
 msgid "Values"
-msgstr ""
+msgstr "值"
 
 msgid "Match"
-msgstr ""
+msgstr "匹配"
 
 msgid "Value"
-msgstr ""
+msgstr "值"
 
 msgid "Parameter updated."
-msgstr ""
+msgstr "已更新参数。"
 
 msgid "Could not update the parameter"
-msgstr ""
+msgstr "无法更新参数"
 
 msgid "Value to use when there is no match"
-msgstr ""
+msgstr "未发现匹配时使用的值"
 
 msgid "Override this parameter"
-msgstr ""
+msgstr "覆盖此参数"
 
 msgid "This parameter is required"
-msgstr ""
+msgstr "此参数是必需的"
 
 msgid "Type of the parameter"
-msgstr ""
+msgstr "参数类型"
 
 msgid "Type of the validator"
-msgstr ""
+msgstr "验证程序类型"
 
 msgid "The order in which values are resolved"
-msgstr ""
+msgstr "值解析的順序"
 
 msgid "Override value, required if omit is false"
-msgstr ""
+msgstr "覆盖值，omit 为 false 时必需"
 
 msgid "Override value created."
-msgstr ""
+msgstr "已创建覆盖值。"
 
 msgid "Could not create the override value"
-msgstr ""
+msgstr "无法创建该覆盖值"
 
 msgid "Cannot use --value when --omit is true."
-msgstr ""
+msgstr "--omit 为 true 时，不能使用 --value。"
 
 msgid "Override value deleted."
-msgstr ""
+msgstr "已删除覆盖值。"
 
 msgid "Could not delete the override value"
-msgstr ""
+msgstr "无法删除覆盖值"
 
 msgid "Import Puppet classes from Puppet proxy"
-msgstr ""
+msgstr "从 Puppet 代理导入 Puppet 类"
 
 msgid "Do not run the import"
-msgstr ""
+msgstr "不运行导入"
 
 msgid "Result"
-msgstr ""
+msgstr "结果"
 
 msgid "Changed environments"
-msgstr ""
+msgstr "修改的环境"
 
 msgid "New classes"
-msgstr ""
+msgstr "新类"
 
 msgid "Updated classes"
-msgstr ""
+msgstr "更新的类"
 
 msgid "Removed classes"
-msgstr ""
+msgstr "删除的类"
 
 msgid "Ignored classes"
-msgstr ""
+msgstr "忽略的类"
