--- a/locale/ko/hammer_cli_foreman_puppet.po
+++ b/locale/ko/hammer_cli_foreman_puppet.po
@@ -6,7 +6,7 @@
 # Translators:
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2021
 # Bryan Kearney <bryan.kearney@gmail.com>, 2021
-# Amit Upadhye <aupadhye@redhat.com>, 2022
+# Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarden.nl>, 2024
 #
 #, fuzzy
 msgid ""
@@ -15,269 +15,269 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-08-02 23:05+0530\n"
 "PO-Revision-Date: 2021-08-02 17:36+0000\n"
-"Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
-"Language-Team: Chinese (China) (https://app.transifex.com/foreman/teams/114/"
-"zh_CN/)\n"
+"Last-Translator: Ewoud Kohl van Wijngaarden "
+"<ewoud+transifex@kohlvanwijngaarden.nl>, 2024\n"
+"Language-Team: Korean (https://app.transifex.com/foreman/teams/114/ko/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: zh_CN\n"
+"Language: ko\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "Manage Foreman Puppet classes"
-msgstr "管理 Foreman Puppet 类"
+msgstr "Foreman Puppet 클래스 관리"
 
 msgid "Manage Foreman Puppet environments"
-msgstr "管理 Foreman Puppet 环境"
+msgstr "Foreman Puppet 환경 관리"
 
 msgid "Manage Foreman config groups"
-msgstr "管理 Foreman 配置组"
+msgstr "Foreman config 그룹 관리"
 
 msgid "Manage Foreman Puppet smart class parameters"
-msgstr "管理 Foreman Puppet 智能类参数"
+msgstr "Foreman Puppet 스마트 클래스 매개변수 관리"
 
 msgid "Associate a Puppet environment"
-msgstr "关联一个 Puppet 环境"
+msgstr "Puppet 환경 연결"
 
 msgid "The environment has been associated."
-msgstr "该环境已经关联。"
+msgstr "환경이 연결되어 있습니다."
 
 msgid "Could not associate the environment"
-msgstr "无法关联该环境"
+msgstr "환경을 연결할 수 없음"
 
 msgid "Disassociate a Puppet environment"
-msgstr "解除与一个 Puppet 环境的关联"
+msgstr "Puppet 환경 분리"
 
 msgid "The environment has been disassociated."
-msgstr "该环境已经取消关联。"
+msgstr "환경이 분리되었습니다."
 
 msgid "Could not disassociate the environment"
-msgstr "无法取消关联该环境"
+msgstr "환경을 분리할 수 없음"
 
 msgid "Id"
 msgstr "ID"
 
 msgid "Name"
-msgstr "名称"
+msgstr "이름 "
 
 msgid "Smart class parameters"
-msgstr "智能类参数"
+msgstr "스마트 클래스 매개 변수 "
 
 msgid "ID of associated Puppet environment"
-msgstr "与 Puppet 环境关联的 ID"
+msgstr "연결된 Puppet 환경의 ID"
 
 msgid "Name of associated Puppet environment"
-msgstr "与 Puppet 环境关联的名称"
+msgstr "연결된 Puppet 환경의 이름"
 
 msgid "IDs of associated Puppet environment"
-msgstr "与 Puppet 环境关联的 ID"
+msgstr "연결된 Puppet 환경의 ID"
 
 msgid "Names of associated Puppet environment"
-msgstr "与 Puppet 环境关联的名称"
+msgstr "연결된 Puppet 환경의 이름"
 
 msgid "List of Puppet class ids"
-msgstr "Puppet 类 id 列表"
+msgstr "Puppet 클래스 ID 목록"
 
 msgid "Name of Puppet CA proxy"
-msgstr "Puppet CA 代理的名称"
+msgstr "Puppet CA 프록시 이름"
 
 msgid "Name of Puppet proxy"
-msgstr "Puppet 代理的名称"
+msgstr "Puppet 프록시 이름"
 
 msgid "ID"
 msgstr "ID"
 
 msgid "Config group created."
-msgstr "已创建配置组。"
+msgstr "Config 그룹 생성"
 
 msgid "Could not create the config group"
-msgstr "无法创建配置组"
+msgstr "Config 그룹을 생성할 수 없습니다."
 
 msgid "Config group updated."
-msgstr "已更新配置组。"
+msgstr "Config 그룹이 업데이트되었습니다."
 
 msgid "Could not update the config group"
-msgstr "无法更新该配置组"
+msgstr "Config 그룹을 업데이트할 수 없습니다."
 
 msgid "Config group has been deleted."
-msgstr "已删除配置组。"
+msgstr "Config 그룹이 삭제되었습니다."
 
 msgid "Could not delete the config group"
-msgstr "无法删除配置组"
+msgstr "Config 그룹을 삭제할 수 없습니다."
 
 msgid "Environment created."
-msgstr "已创建环境。"
+msgstr "환경이 생성되었습니다."
 
 msgid "Could not create the environment"
-msgstr "无法创建环境"
+msgstr "환경을 생성할 수 없습니다 "
 
 msgid "Environment updated."
-msgstr "已更新环境。"
+msgstr "환경이 업데이트되었습니다."
 
 msgid "Could not update the environment"
-msgstr "无法更新环境"
+msgstr "환경을 업데이트할 수 없습니다 "
 
 msgid "Environment deleted."
-msgstr "已删除环境。"
+msgstr "환경이 삭제되었습니다."
 
 msgid "Could not delete the environment"
-msgstr "无法删除环境"
+msgstr "환경을 삭제할 수 없습니다 "
 
 msgid "Puppet Environment"
-msgstr "Puppet 环境"
+msgstr "Puppet 환경 "
 
 msgid "Puppet CA Proxy"
-msgstr "Puppet CA 代理服务器"
+msgstr "Puppet CA 프록시"
 
 msgid "Puppet Master Proxy"
-msgstr "Puppet 主代理服务器"
+msgstr "Puppet 마스터 프록시"
 
 msgid "Missing options to search %s"
-msgstr "缺少搜索 %s 的选项。"
+msgstr "%s의 검색에 누락된 옵션 "
 
 msgid "one of %s not found."
-msgstr "一个 %s 未找到。"
+msgstr "%s 중 하나를 찾을 수 없습니다."
 
 msgid "Puppet environment name"
-msgstr "Puppet 环境名称"
+msgstr "Puppet 환경 이름"
 
 msgid "Puppet class name"
-msgstr "Puppet 类名称"
+msgstr "Puppet 클래스 이름 "
 
 msgid "Smart class parameter name"
-msgstr "智能类参数名称"
+msgstr "스마트 클래스 매개 변수 이름 "
 
 msgid "Name to search by"
-msgstr "用来进行搜索的名称"
+msgstr "검색할 이름 "
 
 msgid "Puppetclasses"
-msgstr "Puppetclasses"
+msgstr "Puppet 클래스 "
 
 msgid "Environments"
-msgstr "环境"
+msgstr "환경 "
 
 msgid "Parameter"
-msgstr "参数"
+msgstr "매개 변수 "
 
 msgid "Default Value"
-msgstr "默认值"
+msgstr "기본값 "
 
 msgid "Override"
-msgstr "覆盖"
+msgstr "덮어쓰기 "
 
 msgid "Puppet class"
-msgstr "Puppet 类别"
+msgstr "Puppet 클래스 "
 
 msgid "Class Id"
-msgstr "类别 ID"
+msgstr "클래스 Id"
 
 msgid "Description"
-msgstr "描述"
+msgstr "설명 "
 
 msgid "Type"
-msgstr "类型"
+msgstr "유형 "
 
 msgid "Hidden Value?"
-msgstr "隐藏值？"
+msgstr "숨겨진 값?"
 
 msgid "Omit"
-msgstr "省略"
+msgstr "생략"
 
 msgid "Required"
-msgstr "必需的"
+msgstr "필수 "
 
 msgid "Validator"
-msgstr "验证器"
+msgstr "유효성 검사기 "
 
 msgid "Rule"
-msgstr "规则"
+msgstr "규칙 "
 
 msgid "Override values"
-msgstr "覆盖规则"
+msgstr "값 덮어쓰기 "
 
 msgid "Merge overrides"
-msgstr "合并覆盖"
+msgstr "덮어쓰기 병합"
 
 msgid "Merge default value"
-msgstr "合并默认值"
+msgstr "기본값 병합"
 
 msgid "Avoid duplicates"
-msgstr "避免重复"
+msgstr "중복 방지"
 
 msgid "Order"
-msgstr "顺序"
+msgstr "순서"
 
 msgid "Values"
-msgstr "值"
+msgstr "값"
 
 msgid "Match"
-msgstr "匹配"
+msgstr "일치 "
 
 msgid "Value"
-msgstr "值"
+msgstr "값 "
 
 msgid "Parameter updated."
-msgstr "已更新参数。"
+msgstr "매개변수가 업데이트되었습니다."
 
 msgid "Could not update the parameter"
-msgstr "无法更新参数"
+msgstr "매개 변수를 업데이트할 수 없습니다 "
 
 msgid "Value to use when there is no match"
-msgstr "未发现匹配时使用的值"
+msgstr "일치하지 않는 경우 사용할 값 "
 
 msgid "Override this parameter"
-msgstr "覆盖此参数"
+msgstr "이 매개변수를 덮어쓰기합니다"
 
 msgid "This parameter is required"
-msgstr "此参数是必需的"
+msgstr "이 매개변수는 필수입니다"
 
 msgid "Type of the parameter"
-msgstr "参数类型"
+msgstr "매개변수의 유형"
 
 msgid "Type of the validator"
-msgstr "验证程序类型"
+msgstr "검증기의 유형"
 
 msgid "The order in which values are resolved"
-msgstr "值解析的順序"
+msgstr "값이 해결되는 순서 "
 
 msgid "Override value, required if omit is false"
-msgstr "覆盖值，omit 为 false 时必需"
+msgstr "덮어쓰기 값, omit이 false인 경우 필요함"
 
 msgid "Override value created."
-msgstr "已创建覆盖值。"
+msgstr "덮어쓰기 값이 생성되었습니다."
 
 msgid "Could not create the override value"
-msgstr "无法创建该覆盖值"
+msgstr "덮어쓰기 값을 생성할 수 없습니다."
 
 msgid "Cannot use --value when --omit is true."
-msgstr "--omit 为 true 时，不能使用 --value。"
+msgstr "--omit이 true인 경우 --value를 사용할 수 없습니다."
 
 msgid "Override value deleted."
-msgstr "已删除覆盖值。"
+msgstr "덮어쓰기 값이 삭제되었습니다."
 
 msgid "Could not delete the override value"
-msgstr "无法删除覆盖值"
+msgstr "덮어쓰기 값을 삭제할 수 없습니다"
 
 msgid "Import Puppet classes from Puppet proxy"
-msgstr "从 Puppet 代理导入 Puppet 类"
+msgstr "Puppet 프록시에서 Puppet 클래스 가져오기"
 
 msgid "Do not run the import"
-msgstr "不运行导入"
+msgstr "가져오기를 실행하지 않습니다 "
 
 msgid "Result"
-msgstr "结果"
+msgstr "결과 "
 
 msgid "Changed environments"
-msgstr "修改的环境"
+msgstr "변경된 환경 "
 
 msgid "New classes"
-msgstr "新类"
+msgstr "새 클래스"
 
 msgid "Updated classes"
-msgstr "更新的类"
+msgstr "업데이트된 클래스"
 
 msgid "Removed classes"
-msgstr "删除的类"
+msgstr "제거된 클래스"
 
 msgid "Ignored classes"
-msgstr "忽略的类"
+msgstr "무시된 클래스"
