--- a/locale/ja/hammer_cli_foreman_puppet.po
+++ b/locale/ja/hammer_cli_foreman_puppet.po
@@ -8,6 +8,7 @@
 # Bryan Kearney <bryan.kearney@gmail.com>, 2021
 # Transifex Bot <>, 2021
 # Amit Upadhye <aupadhye@redhat.com>, 2022
+# Ewoud Kohl van Wijngaarden <ewoud+transifex@kohlvanwijngaarden.nl>, 2025
 #
 #, fuzzy
 msgid ""
@@ -16,7 +17,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-08-02 23:05+0530\n"
 "PO-Revision-Date: 2021-08-02 17:36+0000\n"
-"Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
+"Last-Translator: Ewoud Kohl van Wijngaarden "
+"<ewoud+transifex@kohlvanwijngaarden.nl>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/foreman/teams/114/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -241,7 +243,7 @@ msgid "The order in which values are resolved"
 msgstr "値が解決される順序"
 
 msgid "Override value, required if omit is false"
-msgstr "上書き値 (omit が false の場合に必要)"
+msgstr "上書き値 (--omit が false の場合に必要)"
 
 msgid "Override value created."
 msgstr "上書き値が作成されました。"
